fix overflow on dropdown (#1889)

--- a/frontend/src/views/Project/components/ProjectHeader/components/GlobalSearch/components/SearchResultsDropdown/SearchResultsDropdown.module.css
+++ b/frontend/src/views/Project/components/ProjectHeader/components/GlobalSearch/components/SearchResultsDropdown/SearchResultsDropdown.module.css
@@ -23,6 +23,7 @@
 
 .resultsContainer {
   max-height: 15rem;
+  overflow-y: auto;
 }
 
 .loadingContainer {
